--- a/lib/generators/happy_seed/omniauth/templates/docs/README.04.omniauth.rdoc
+++ b/lib/generators/happy_seed/omniauth/templates/docs/README.04.omniauth.rdoc
@@ -5,13 +5,12 @@ HappySeed Omniauth Install
 
 The happy_seed:omniauth generator depends upon happy_seed:devise and
 
-
 * Generates an Intentity model, linked to user
 * Installs omniauth
 * Installs an omniauth_controller
 * Updates devise configuration
 * Adds routes
-* Inserts code into User to do the lookup TODO
+* Inserts code into User to do the lookup
 * Inserts fallback controller to handle the login
 
 ### Why do you want this?
