--- a/lib/generators/happy_seed/bootstrap/templates/docs/README.01.bootstrap.rdoc
+++ b/lib/generators/happy_seed/bootstrap/templates/docs/README.01.bootstrap.rdoc
@@ -18,6 +18,8 @@ The happy_seed bootstrap generator
 
 Bootstrap should be the base of all our projects going forward.  This creates a variables.css.scss where you can configure bootstrap to your needs, and you can put the custom css stuff after that.
 
+The splash generator builds on this, but doesn't use the main "application.css" stylesheets or javascripts.  The layout here should be used for the application proper.
+
 Better scaffolding means that it's easier to just whip up things to get started.  While you will obviously eventually rewrite all of this code, it's good to have working stuff to start with that doesn't look painful.
 
 ### Environment Variables
@@ -29,3 +31,7 @@ Better scaffolding means that it's easier to just whip up things to get started.
 ### What needs to be done?
 
 Signup for google analytics and setup the site id.
+
+http://www.google.com/analytics/
+
+
