--- a/lib/generators/happy_seed/twitter/templates/docs/README.05.twitter.rdoc
+++ b/lib/generators/happy_seed/twitter/templates/docs/README.05.twitter.rdoc
@@ -21,4 +21,6 @@ If you want to have the user connect via twitter, this is the one line command f
 
 ### What needs to be done?
 
-na
+Go to twitter.com and sign up for an application.  Since you need to set the callbacks as urls, you'll need to create one app for local development and another app for production.  (Possibly one for staging as well.)
+
+https://dev.twitter.com
