--- a/lib/generators/happy_seed/devise/templates/docs/README.03.devise.rdoc
+++ b/lib/generators/happy_seed/devise/templates/docs/README.03.devise.rdoc
@@ -14,7 +14,7 @@ The happy_seed:devise generator
 
 ### Why do you want this?
 
-User auth is boring.
+Devise is a well tested and fully featured way to get user authentication.  The generate sets things up with the defaults, but there are a lot more things to tweak if you are interested.
 
 ### Environment Variables
 
@@ -22,4 +22,6 @@ na
 
 ### What needs to be done?
 
-Flesh out the user model and run rake db:migrate.
+Take a look at the user model to see if you want to configure any other features in devise.  Look at the migration to see if there are any other fields you wish the users to have.
+
+Once you feel good about it run "rake db:migrate" and you should be good to go.
