--- a/lib/generators/happy_seed/facebook/templates/docs/README.06.facebook.rdoc
+++ b/lib/generators/happy_seed/facebook/templates/docs/README.06.facebook.rdoc
@@ -22,3 +22,7 @@ If you want to have the user connect via facebook, this is the one line command 
 ### What needs to be done?
 
 In config/initializers/devise.rb make sure that the scope you are requesting is correct.
+
+Since you need to set the callbacks as urls, you'll need to create one app for local development and another app for production.  (Possibly one for staging as well.)
+
+https://developers.facebook.com
