--- a/lib/generators/happy_seed/jazz_hands/templates/docs/README.12.jazz_hands.rdoc
+++ b/lib/generators/happy_seed/jazz_hands/templates/docs/README.12.jazz_hands.rdoc
@@ -13,6 +13,18 @@ Spending hours in the rails console? Spruce it up and show off those hard-workin
 
 jazz_hands is an opinionated set of console-related gems and a bit of glue
 
+### Good to know
+
+The debugger gem works for 1.8 and 1.9 Ruby. But not for > 2.0.
+
+It is recommended to use byebug or debugger2 for Ruby > 2.0
+
+If any one has problems with spring loading on Rails 4, then we recommend restarting spring
+
+```
+bin/spring stop
+```
+
 ### What needs to be done?
 
 na
