Got the api specs working

--- a/lib/generators/happy_seed/api/templates/docs/README.01.api.rdoc
+++ b/lib/generators/happy_seed/api/templates/docs/README.01.api.rdoc
@@ -18,4 +18,8 @@ na
 
 ### What needs to be done?
 
-na
+After you update your specs in spec/acceptance, run
+
+rake docs:generate
+
+to output the files into the docs/api directory.
