--- a/lib/generators/happy_seed/splash/templates/docs/README.02.splash.rdoc
+++ b/lib/generators/happy_seed/splash/templates/docs/README.02.splash.rdoc
@@ -26,6 +26,10 @@ This is for the mailchimp signup form.
 
 ### What needs to be done?
 
-Style the page by editing assets/stylesheets/slash.css.scss, views/splash/index.html.haml, and views/layouts/splash
+Style the page by editing assets/stylesheets/slash.css.scss, views/splash/index.html.haml, and views/layouts/splash.html.haml
 
-Sign up for mailchimp, get your api key, create a mailing list and setup the environment.
+1. Signup for mailchimp: https://login.mailchimp.com/signup
+2. Activate your account
+3. Create a mailing list: List -> Create List
+4. Get list ID (Settings -> List name and defaults) for MAILCHIMP_SPLASH_SIGNUP_LIST_ID
+5. Get MAILCHIMP_API_KEY (Your name -> Account -> Extras -> API Keys)
