--- a/lib/generators/happy_seed/admin/templates/docs/README.07.admin.rdoc
+++ b/lib/generators/happy_seed/admin/templates/docs/README.07.admin.rdoc
@@ -23,3 +23,26 @@ na
 Add models to the dashboard.
 
 (the happy_Seed stats module is in development)
+
+### Example of using rich text editor
+
+```
+rails g scaffold faq title:string body:text position:integer
+```
+
+Then create `app/admin/faq.rb`:
+
+ActiveAdmin.register Faq do
+  permit_params :title, :body, :position
+  
+  form do |f|
+    f.semantic_errors # shows errors on :base
+    f.inputs do
+      f.input :title
+      f.input :body, as: :ckeditor, input_html: { ckeditor: { height: 400 } }          # builds an input field for every attribute
+      f.input :position
+    end
+    f.actions         # adds the 'Submit' and 'Cancel' buttons
+  end
+end
+
