--- a/lib/generators/happy_seed/devise_confirmable/templates/docs/README.03.devise_confirmable.rdoc
+++ b/lib/generators/happy_seed/devise_confirmable/templates/docs/README.03.devise_confirmable.rdoc
@@ -12,7 +12,7 @@ The `happy_seed:devise_confirmable` generator
 
 ### Why do you want this?
 
-This allows you to invite users to the site and have them sign up through a link.
+This allows you to confirm users through an email link and checks to make sure they are confirmed when logging in. For more information on devise and confirmable, [head](https://github.com/plataformatec/devise) here for the readme.
 
 ### Environment Variables
 
